--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
     <!-- 지도 api 연결링크입니다. 수정 절대 금지 -->
     <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=6um4uarnuv"></script>
-    <title>React App</title>
+    <title>마음이음</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
