modify settings of package.json(+add setupProxy.js)

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
     <!-- 지도 api 연결링크입니다. 수정 절대 금지 -->
     <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=6um4uarnuv"></script>
     <script type="text/javascript" src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpClientId=6um4uarnuv&submodules=geocoder"></script>
+    <script script src="https://apis.openapi.sk.com/tmap/jsv2?version=1&appKey=Jsvbb3ZbNZ6ouYFH3UU7s1GWcgquuONza47VH4OC"></script>
     <title>마음이음</title>
   </head>
   <body>
