마음이음 이름 돌리기

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=6um4uarnuv"></script>
     <script type="text/javascript" src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpClientId=6um4uarnuv&submodules=geocoder"></script>
     <script script src="https://apis.openapi.sk.com/tmap/jsv2?version=1&appKey=Jsvbb3ZbNZ6ouYFH3UU7s1GWcgquuONza47VH4OC"></script>
-    <title>%EB%A7%88%EC%9D%8C%EC%9D%B4%EC%9D%8C</title>
+    <title>마음이음</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
